@@ -28,6 +28,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -69,7 +70,7 @@ public class MixinContainer {
                 String simpleName = clazz.getSimpleName();
                 
                 MixinContainer.logger.debug("Instancing new {} for {}", simpleName, this.handle);
-                IMixinPlatformAgent agent = clazz.newInstance();
+                IMixinPlatformAgent agent = clazz.getDeclaredConstructor().newInstance();
                 
                 AcceptResult acceptAction = agent.accept(manager, this.handle);
                 if (acceptAction == AcceptResult.ACCEPTED) {
@@ -79,7 +80,7 @@ public class MixinContainer {
                     continue;
                 }
                 
-                MixinContainer.logger.debug("{} {} container {}", simpleName, acceptAction.name().toLowerCase(), this.handle);
+                MixinContainer.logger.debug("{} {} container {}", simpleName, acceptAction.name().toLowerCase(Locale.ROOT), this.handle);
             } catch (InstantiationException ex) {
                 Throwable cause = ex.getCause();
                 if (cause instanceof RuntimeException) {
